Image and Z-index fixes

--- a/src/styles/GeneralComponents/gamebar.module.scss
+++ b/src/styles/GeneralComponents/gamebar.module.scss
@@ -1,7 +1,7 @@
 .GameBarContainer {
     background: #FF6263;
     color: #fff;
-    z-index: 50;
+    z-index: 5;
     padding:2rem;
     margin:1rem;
     border-radius: 2rem;
@@ -29,8 +29,8 @@
                 flex-direction: column;
                 padding: 1rem;
                 .gameImg{
-                width: 12rem;
-                height: 10rem;
+                width: 16rem;
+                height: 12rem;
                 border-radius: 2rem;
             }
         }
@@ -47,7 +47,7 @@
             font-weight: 500;
             font-size: 1.25rem;
             transition: all 0.3s ease;
-            z-index: 15;
+            z-index: 5;
             border: 0;
             &:hover {
                 background-color: #ffffff;
